--- a/CuantoEs/res/layout/romana.xml
+++ b/CuantoEs/res/layout/romana.xml
@@ -1,16 +1,17 @@
-<RelativeLayout 
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <Button
-        android:id="@+id/romanaButton"
+    <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="51dp"
-        android:text="A la romana" />
+        android:layout_marginLeft="41dp"
+        android:layout_marginTop="76dp"
+        android:text="PlaceHolder" />
 
 </RelativeLayout>
