--- a/CuantoEs/res/layout/activity_main.xml
+++ b/CuantoEs/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="51dp"
-        android:text="A la romana" />
+        android:text="A la romana"
+        android:onClick="showRomana" />
 
 </RelativeLayout>
